--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="main.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
     <hr/>
-    <div id="display-element"></div>
-    <form>
-      <input id="user-input" type="text">
+    <form id="form">
+      <input 
+        id="user-input"
+        type="text"
+        value=""
+      />
+      
+  
       <!-- How do you get this input sent to the pigLatin() function? -->
-      <button onclick="pigLatin()">Translate</button>
+      <button type="submit">Translate</button>
     </form>  
     <hr/>
+    
+    <div id="display-element"></div>
   </body>
+  <script src="index.js"></script>
 </html>
